cluster/apps/default/home-assistant/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: home-assistant
  namespace: default
  labels:
    app.kubernetes.io/name: home-assistant
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  strategy:
    # All existing Pods are killed before new ones are created
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: home-assistant
  template:
    metadata:
      labels:
        app.kubernetes.io/name: home-assistant
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        fsGroupChangePolicy: "OnRootMismatch"
      # hostNetwork: true
      containers:
        - name: home-assistant
          image: homeassistant/home-assistant:2023.3.1
          resources:
            requests:
              cpu: 10m
              memory: 16Mi
            limits:
              cpu: 3000m
              memory: 1024Mi
          ports:
            - containerPort: 8123
              name: http
              protocol: TCP
          volumeMounts:
            - name: home-assistant-data
              mountPath: /config
              subPath: config
            - name: home-assistant-customcomponents
              mountPath: /config/custom_components
            # - mountPath: /config/binarysensors
            #   name: home-assistant-binarysensors
            # - mountPath: /config/templates
            #   name: home-assistant-templates
            - name: home-assistant-config
              mountPath: /config/configuration.yaml
              subPath: configuration.yaml
      volumes:
        - name: home-assistant-data
          persistentVolumeClaim:
            claimName: home-assistant-data
        - name: home-assistant-customcomponents
          emptyDir: {}
        # - name: home-assistant-binarysensors
        #   configMap:
        #     name: home-assistant-binarysensors
        # - name: home-assistant-templates
        #   configMap:
        #     name: home-assistant-templates
        - name: home-assistant-config
          configMap:
            name: home-assistant-config
