cluster/apps/default/home-assistant/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
  namespace: default
  annotations:
    metallb.universe.tf/loadBalancerIPs: |-
      ${CLUSTER_SVC_HOMEASSISTANT_IP}
spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8123
  selector:
    app.kubernetes.io/name: home-assistant
